crates/vihaco-parser/tests/compile_errors/pattern_with_legacy_delegate.rs
// SPDX-FileCopyrightText: 2026 The vihaco Authors
// SPDX-License-Identifier: MIT

use vihaco_parser::Parse;

#[derive(Parse)]
#[syntax_class(value)]
enum Value {
    #[delegate]
    Number(i64),
}

fn main() {}
