crates/vihaco-parser/tests/compile_errors/pattern_with_legacy_delegate.stderr
error: `#[delegate]` is a legacy parser attribute and cannot be combined with #[syntax_class]
 --> tests/compile_errors/pattern_with_legacy_delegate.rs:9:5
  |
9 |     #[delegate]
  |     ^
